# nameserver

./: Cargo.toml
src/: main.rs  server.rs
