[package]
name = "nameserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.3.1"
log = "0.4.18"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
